css/index.css
*{
    margin: 0;
    padding: 0;
}


body
{ font-family: sans-serif;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-image: url(/images/stars.gif);
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
}

.header{
    position: fixed;
    width: 100%;
}

.headerbar{
/*
    width: 100%;
    position:fixed;
*/
    background-color:rgba(16, 2, 63, 0.2);
    color: rgba(255, 204, 0,0.5);
    text-align: center;
    font-family: courier;
    font-size: 1.6em; 
    padding: 1%;
    overflow: hidden;
}

.headerbar a{
  text-decoration: none;
    color: rgba(77, 0, 153,0.8);
}

.headerbar a:hover{
    background-color: grey;
    color: gold;
}



.divnav{
    flex: 100%;
    margin-left: 10%;

/*
  position: fixed;
  left: 20%;
  top: 15%;
    width: 10%;
*/
}


.linav{
    width: 10%;  
}

.linav li
{ list-style: none;
  margin-top: 5px;
  
}

   

.linav a
{ display: block;
  padding: 10px;
  color: white;  
  text-transform: uppercase;
  text-decoration: none;
  background-color:rgba(16, 2, 63, 0.4);
  text-align: center;
  border: 1px solid rgba(16, 2, 63, 0.8);
  border-radius: 30%;
  transition: width 1s, height 1s, transform 2s;
}



.linav a:hover
{ background-color:aliceblue;
    color: red;
/*
    width: 110%;
    height: 110%;
*/
    transform: translate(30px, 10px);

   /* transform: rotate(360deg);*/
}




.container{
/*  padding-top: 7%;*/
  text-align: center;
  padding: 5% 0 1% 0;
    display: flex;
  flex-direction: column;

}


.content{
  color: white;
  text-align: center;
    padding: 1% 0 1% 0;
    margin: 3% 5% 2% 1%;
  
}


img{
 width: 20%;
  height: auto;
  top: 65%;
  margin: auto;
  border: solid 1px darkblue;
 }

h1
{ font-family: Arial;
  font-size: 1.7em;
}



.socialmedia a{
  color: white;
  text-align: center;
  display: inline-block;
  background-color:rgba(16, 2, 63, 0.2);
  font-size: 1.5em;
  margin: 3px;
  border:1px solid rgba(16, 2, 63, 0.8);
  padding: 5px;
transition: width 1s, height 1s, transform 2s;

}


.socialmedia li
{ list-style-type: none;
  display: inline-flex;
}

.socialmedia a:hover
{ background-color: beige;
  color: red;
/* transform: rotate(360deg);*/
transform: translate(-5px, -1px);

}

#email, #mobile, #website { 
  background-color:rgba(16, 2, 63, 0.2);
  color: red;
  font-size: 1.2em;
  padding: 2%;
}

#website a:hover { 
    background-color: beige;
    color: red;
    padding: 2px;
}

.footer{
    width: 50px;
    height: 50px;
    padding-bottom: 2%;
    border: 1px solid rgba(16, 2, 63, 0.2);
    border-radius: 50%;
    background-color: red;
    position: relative;
    animation: myfirst 5s linear 2s infinite alternate;
}

@keyframes myfirst {
    0%   {background-color:red; left:0px; top:0px;}
    25%  {background-color:yellow; left:50%; top:25px;}
    50%  {background-color:blue; left:90%; top:-10px;}
    75%  {background-color:green; left:50%; top:25px;}
    100% {background-color:red; left:0px; top:0px;}
    }


/***********************************************************************************/

@media only screen and (max-width: 600px){
   .info h1, .info h2 {
        font-size: 1.2em;
       padding: 0;
    }

    
 .divnav{ 
  margin-left: 0;
  float: left;
}


.linav{
    width: 100%;  
}

.linav li{
    list-style: none;
  display: inline-block;
}

   

.linav a{
  padding: 5px;
  color: purple; 
  text-transform: uppercase;
  text-decoration: none;
  background-color:rgba(16, 2, 63, 0.4);
  border-radius: 5%;
  text-align: center;
  font-family:sans-serif;
    font-weight: bold;

}

.linav a:hover{
    background-color:floralwhite;
    color: red;
    transform: none;
    width: 100%;
    height: 100%;

   /* transform: rotate(360deg);*/
}
    
.container{
  padding-top: 100px;
}
    
/*
    -webkit-animation: none !important;
		-moz-animation: none !important;
		-o-animation: none !important;
		-ms-animation: none !important;
*/
    .footer{
        width: 0;
        height: 0;
        background-color:rgba(16, 2, 63, 0);
        animation: none !important;
    }	


}

